--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,6 @@ jobs:
 
     steps:
     - name: Building
-      run: docker --file Dockerfile -t hnh-name
+      run: docker build . --file Dockerfile --tag hnh-map
     - name: Running
       run: docker run -d --restart=always -v /srv/hnh-map:/map -p 80:8080 --name map hnh-map
