--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,10 +9,11 @@ on:
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
+    
     - name: Building
       run: docker build . -t hnh-map
     - name: Running
