--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,11 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Running
-      uses: wshihadeh/docker-deployment-action@v2
+      uses: addnab/docker-run-action@v3
       with:
-        remote_docker_host: root@gihub.com
+        image: Cediner/hnh-map-vuetify:latest
+        options: -v ${{ github.workspace }}:/var/www
+        run: /
+          composer install
+          npm install
+          npm run priduction
