--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,8 @@ WORKDIR /frontend
 RUN apk add --no-cache npm
 
 COPY package.json .
-RUN npm install
+RUN npm install node@16.0.0 --save-dev
+RUN npm audit fix --force
 
 COPY ./ ./
 
