--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.18.4 AS frontendbuilder
+FROM alpine:3.15.10 AS frontendbuilder
 
 RUN mkdir /frontend
 WORKDIR /frontend
@@ -6,8 +6,7 @@ WORKDIR /frontend
 RUN apk add --no-cache npm
 
 COPY package.json .
-RUN npm install node@16.0.0 --save-dev
-RUN npm audit fix --force
+RUN npm install
 
 COPY ./ ./
 
